Deploy to Sonatype works.